# open-cv

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  consignes.md  deny.toml  eslint.config.js  flake.nix  package.json  scrape-offres.yaml  shell.nix  stylelint.config.js
.cargo/: audit.toml
.github/workflows/: backend.yml  frontend.yml  release.yml
.sqlx/: query-0240aa8baf1dd5dea2dab1e659b6c6ccc11d37cfdb503019087305c3023bad49.json  query-0c4fcc35d83ada6a525ee2e8413c0144eae30988099cd07ed6a264de54c93db4.json  query-0efd4fff7778af6d1720a217dce2b8281bf53e782ff1029dc460882540244458.json  query-1aa4c593995f2ff94b8d6b61f22fff7e434e632d2531bcb82fc59bb3741a5bda.json  query-3a6502142f2467dcaac54d01d0d1ae8d429471b9139c687cf93ad2d1c0c09af0.json  query-43e10bf05758e3926b0bff76697dc038fde89ecd981347f34b96dbdb9d9259a6.json  query-47749475fc00ff6f7e5042b40ab26eeb915197e6ce84df8005a87a9038af4437.json  query-5c3917c0a8adcb02296e58664bca56504a90d8a0910b30f3cda8401c34cdfcce.json  query-706acf632054f0f24ae35a954c86dce8dc9f0177ae8889e3b0944aed565c1300.json  query-725ff9c7218ac571e3c5ebbd2d0d6ea11c5d1d0b83a7deabe59fd734d8454e27.json  query-94c45ad1620421423ab039ee9bcbf7d4001b92f126c97264783c0832791af9f3.json  query-a5c50cdfadd0bc332684c5a65609ea06d110372e3b0ebd9da050681b1ff280bd.json  query-caa95395b038847ed6bd6e24646a59eb09735f21dd633c2caaf596bd02b78a1f.json  query-f030d96f721cdcbd4665188c53a1b23554afe36068b8a7b3604666b416b0fd28.json
config/: offres-urls.raw.json  scrape-offres.yaml
crates/adapters/llm_claude/: Cargo.toml
crates/adapters/llm_claude/src/: lib.rs
crates/adapters/llm_ollama/: Cargo.toml
crates/adapters/llm_ollama/src/: lib.rs
crates/adapters/llm_openai/: Cargo.toml
crates/adapters/llm_openai/src/: lib.rs
crates/adapters/postgres/: Cargo.toml
crates/adapters/postgres/src/: annexe.rs  chunk.rs  helpers.rs  instance.rs  lib.rs  message.rs  offre.rs  profil.rs  snapshot.rs
crates/adapters/scraper_http/: Cargo.toml
crates/adapters/scraper_http/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: batch_cover.rs  errors.rs  lib.rs  main.rs  state.rs
crates/api/src/handlers/: chat.rs  ingest.rs  instance.rs  mod.rs  offre.rs  profile.rs
crates/api/src/handlers/ingest/: helpers.rs  logic.rs
crates/api/src/handlers/profile/: helpers.rs  mapping.rs
crates/api/tests/: api_integration.rs
crates/api/tests/common/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: chat.rs  events.rs  generate.rs  index_profil.rs  intake.rs  lib.rs  test_mocks.rs
crates/application/src/chat/: chat_event.rs  driver.rs  helpers.rs  mod.rs  persistence.rs  prompt_utils.rs  streaming.rs  tests.rs  types.rs
crates/application/src/generate/: helpers.rs  mod.rs  steps.rs  tests.rs
crates/application/src/intake/: deduplicator.rs  extractor.rs  mod.rs  resolver.rs  tests.rs
crates/application/src/prompts/: chat.rs  generate.rs
crates/application/tests/: profil_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: chunk.rs  cover_letter.rs  errors.rs  ids.rs  instance.rs  json.rs  lib.rs  message.rs  offre.rs  profil.rs  restitution.rs  resume.rs  snapshot.rs
crates/ports/: Cargo.toml
crates/ports/src/: embedder.rs  lib.rs  llm.rs  repos.rs  scraper.rs
cv-web/: index.html  style.css
cv/markdown/modele/: cv_template.md
cv/markdown/new/: cv-arianegroup-alternance-developpeur-ia.md
cv/web/: index.html
data/instances/arianegroup_alternance_developpeur_ia/: cover-letter.json  meta.json  resume.json
data/instances/credit_agricole_stage_alternance_ia_2026_110627/: cover-letter.json  meta.json  resume.json
data/instances/dassault_systemes_apprentissage_ingenieur_developpement_outils_et_ia_547835/: cover-letter.json  meta.json  resume.json
data/instances/dassault_systemes_apprentissage_ingenieur_ia_547531/: cover-letter.json  meta.json  resume.json
data/instances/dassault_systemes_apprentissage_ingenieur_intelligence_artificielle_547433/: cover-letter.json  meta.json  resume.json
data/instances/fondation_du_patrimoine_alternance_assistant_developpeur_api/: cover-letter.json  meta.json  resume.json
data/instances/itonics_data_and_ai_engineer_apprenticeship/: cover-letter.json  meta.json  resume.json
data/instances/mbda_apprentissage_data_engineer/: cover-letter.json  meta.json  resume.json
data/instances/mbda_apprentissage_digital_learning_designer/: resume.json  (+1 more)
data/offres/: liste.json  liste.md
data/scripts/: seed_blank.rs  seed_offers_instances.rs  seed_profile.rs
data/templates/: cover-letter.json  resume.json
data/user/: profil_to_upload.md  profile.md
docs/: README.md  architecture_proposition.md  audit.md  backend_cleanup_plan.md  blueprint.md  blueprint_saas.md  cleanup_status.md  conduct_code.md  data_management.md  design.md  edit_blueprint.py  how_it_works.md  instructions.md  project_map.md  toolkit.md
engines/cover-letter/: script.js
engines/resume/: script.js
engines/scripts/: cv_tool.py  personalize_all.py  scrape_offres.py  show_all_intros.sh
engines/web/: index.html
migrations/: 0001_init.sql  0001_initial.sql  0002_normalize_instance_json_nulls.sql
offres/: liste.md
offres/offres/: itonics_data_and_ai_engineer_apprenticeship.md  mbda_apprentissage_developpement_de_simulations_numeriques.md  mbda_apprentissage_ingenieur_developpement_logiciel_f_h.md  mbda_apprentissage_intelligence_technologique_and_open_innovation.md  mbda_contrat_pro_algorithmes_de_decision_pour_systemes_complexes.md  mbda_systemes_autonomes_intelligents.md  safran_alternance_ia_mise_en_place_llm_bordes.md  safran_charge_innovation_fablab_moissy_cramayel.md
resume/web/: script.js
scratch/: async_gen.rs  load_data.py  refresh_tab.js  restore.sh  skeleton_style.css
scripts/: cv_tool.py  paths.py  personalize_all.py  scrape_offres.py
tooling/: eslint.config.js  health_report.md  knip.json  sonar-project.properties  stylelint.config.js  tarpaulin.toml
web/: index.html
web/cover-letter/: index.html  script.js  style.css
web/restitution/: index.html
web/resume/: index.html  script.js  style.css
(+582 files in other folders)
