[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/ports",
    "crates/application",
    "crates/adapters/postgres",
    "crates/adapters/llm_claude",
    "crates/adapters/llm_openai",
    "crates/adapters/llm_ollama",
    "crates/adapters/scraper_http",
    "crates/api",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"
authors     = ["Roméo Cavazza"]
license     = "MIT"

[workspace.dependencies]
# Async runtime
tokio       = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures     = "0.3"

# HTTP server
axum         = { version = "0.7", features = ["macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper        = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
schemars   = { version = "0.8", features = ["chrono", "uuid1"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
sha2       = "0.10"
hex        = "0.4"
url        = "2"
once_cell  = "1"
dotenvy    = "0.15"

# Scraping
scraper      = "0.20"
encoding_rs  = "0.8"

[profile.release]
lto             = "thin"
codegen-units   = 1
opt-level       = 3
strip           = "symbols"

[profile.dev]
# Faster incremental builds
opt-level = 0
debug     = 1
