[package]
license = "MIT"
name        = "api"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain                = { path = "../domain" }
ports                 = { path = "../ports" }
application           = { path = "../application" }
adapter-postgres      = { path = "../adapters/postgres" }
adapter-llm-claude    = { path = "../adapters/llm_claude" }
adapter-llm-openai    = { path = "../adapters/llm_openai" }
adapter-llm-ollama    = { path = "../adapters/llm_ollama" }
adapter-scraper-http  = { path = "../adapters/scraper_http" }

axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
tower-http         = { workspace = true, features = ["fs", "trace", "cors"] }
tokio              = { workspace = true }
sqlx               = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy            = { workspace = true }
anyhow.workspace   = true
base64             = { workspace = true }
async-trait.workspace = true
tower.workspace = true
sha2               = { workspace = true }

[dev-dependencies]
axum-test = "15.6.0"
