[package]
name        = "application"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[features]
default    = []
test-mocks = []

[dependencies]
domain      = { path = "../domain" }
ports       = { path = "../ports" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
schemars    = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
sha2        = { workspace = true }
url         = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
