[package]
license = "MIT"
name        = "domain"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
schemars   = { workspace = true }

[dev-dependencies]
