[package]
license = "MIT"
name        = "adapter-llm-claude"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
name = "adapter_llm_claude"
path = "src/lib.rs"

[dependencies]
ports       = { path = "../../ports" }
async-trait = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
base64.workspace = true
