[package]
license = "MIT"
name = "adapter-llm-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
ports = { path = "../../ports" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
uuid.workspace = true
base64.workspace = true
