[package]
name = "adapter-llm-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
ports = { path = "../../ports" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
