[package]
name        = "adapter-postgres"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
name = "adapter_postgres"
path = "src/lib.rs"

[dependencies]
domain      = { path = "../../domain" }
ports       = { path = "../../ports" }
async-trait = { workspace = true }
sqlx        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
